objects/Product2/fields/Density_Family__c.field-meta.xml
<CustomField>
    <fullName>Density_Family__c</fullName>
    <label>Density</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Density</valueSetName>
    </valueSet>
</CustomField>