objects/Product2/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>