objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Modified/Flame retardant</fullName>
            </value>
            <value>
                <fullName>Regular/Shape</fullName>
            </value>
            <value>
                <fullName>Specialty/Cup Grade/Foundry Grade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>