objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.QTY_UNIT_OF_MEASURE</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Grade__c</columns>
    <columns>Density_Family__c</columns>
    <columns>Product_Type__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>SBQQ__QuantityScale__c</columns>
    <columns>Division__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Valves</value>
    </filters>
    <label>All Products</label>
</ListView>